[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-velocity"
version = "1.1.0"
description = "Terminal Velocity: a bullet-dodging game in the terminal, made in Python."
authors = [
    { name="Mason Rustad", email="mason.rustad@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
keywords = ["game", "terminal", "bullet-dodging", "python"]

dependencies = [
    "colorama",
    "keyboard",
    "requests",
    "qrcode"
]

[project.scripts]
terminal-velocity = "main:main"
